# BlockDude_TailsVersion

./: .gitignore  2021li1g092.cabal  README.md  coverage.csv  docs.txt  documentation.txt  errors-T1.txt  errors-T2.txt  errors-T3.txt  errors-T4.txt  errors.txt  results-T1.txt  results-T2.txt  results-T3.txt  results-T4.txt  results.txt  stack.yaml
src/: Funcoesuteis.hs  LI12122.hi  LI12122.hs  Mapas.hs  Tarefa1_2021li1g092.hs  Tarefa2_2021li1g092.hs  Tarefa3_2021li1g092.hs  Tarefa4_2021li1g092.hs  Tarefa5_2021li1g092.hs  Tarefa6_2021li1g092.hs  funcoesuteis.hi
src/doc/html/: Funcoesuteis.html  LI12122.html  Main.html  Tarefa1_2021li1g092.html  Tarefa2_2021li1g092.html  Tarefa3_2021li1g092.html  Tarefa4_2021li1g092.html  Tarefa6_2021li1g092.html  doc-index.html  index.html
tests/: Fase1.hs  Fixtures.hs  Tarefa1_2021li1g092_Spec.hs  Tarefa2_2021li1g092_Spec.hs  Tarefa3_2021li1g092_Spec.hs  Tarefa4_2021li1g092_Spec.hs  Tarefa6_2021li1g092_Spec.hs  Tests.hs
